[metadata]
name = agentsbar-pettingzoo
version = 0.1.0
author = 'Dawid Laszuk'
author_email = "pettingzoo@agents.bar"
description = "Agents Bar environment wrapper to serve through API"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
keywords = AI, RL, DeRL, ML, Deep Reinforcement Learning, Machine Learning
install_requires =
    uvicorn~=0.13.4
    requests~=2.25.1
    fastapi~=0.63.0
    pydantic~=1.7.3
    pettingzoo[all] == 1.11.*

[options.extras_require]
lint =
    pylint~=2.7.4

[flake8]
ignore = E203,
    E226,  # I like to group operations. What are you going to do about it, huh?
    E252,  # Ain't nobody tell me how to type arguments
    W503

[pylint]
disable =
    C0114,  # missing-module-docstring

[pylint.format]
max-line-length = 120
good-names=i,j,k,idx,_,pk,x,y  # List of short names that we swear are Ok

[isort]
line_length = 120
